--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "recharts": "^3.6.0",
     "resend": "^6.6.0",
     "twilio": "^5.11.1",
+    "xlsx": "^0.18.5",
     "zod": "^4.3.5"
   },
   "devDependencies": {
