--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,32 +1,69 @@
-name: Deploy Production
+name: Deploy to Lightsail
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
+
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
+  build-and-push:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+    
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Log in to the Container registry
+        uses: docker/login-action@v2
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+
   deploy:
     runs-on: ubuntu-latest
+    needs: build-and-push
+    
     steps:
-    - name: Deploy via SSH
-      uses: appleboy/ssh-action@v1.0.0
-      with:
-        host: ${{ secrets.PROD_HOST }}
-        username: ubuntu
-        key: ${{ secrets.PROD_SSH_KEY }}
-        script: |
-          # Navigate to project directory (Adjust path if you cloned elsewhere)
-          cd /var/www/sleepyhollows
-          
-          # Pull latest changes
-          git pull origin main
-          
-          # Install dependencies
-          npm install
-          
-          # Build the application
-          npm run build
-          
-          # Restart the application
-          # Reloads if running, starts if not
-          pm2 reload sleepyhollows || pm2 start npm --name "sleepyhollows" -- start
+      - name: Deploy to Lightsail via SSH
+        uses: appleboy/ssh-action@v1.0.0
+        with:
+          host: tns.sleepyhollows.com
+          username: ubuntu
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          script: |
+            # Pull new image
+            docker pull ghcr.io/kyle-beggan/sleepyhollows:latest
+            
+            # Restart service to pick up new image
+            cd sleepyhollows
+            
+            # Ensure we are logged in to pull (might need token on server, or public package)
+            # Assuming public package or manual login performed once
+            
+            docker compose down
+            docker compose up -d
+            
+            # Prune old images to save space
+            docker image prune -a -f
