--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
   web:
     container_name: sleepyhollows_web
-    image: ghcr.io/kyle-beggan/thursdaynightsessions:latest
+    image: ghcr.io/kyle-beggan/thursdaynightsessions:main
     # build:
     #   context: .
     #   dockerfile: Dockerfile
@@ -14,8 +14,4 @@ services:
       - .env.local
     environment:
       - NODE_ENV=production
-      - NEXT_PUBLIC_SUPABASE_URL=${NEXT_PUBLIC_SUPABASE_URL}
-      - NEXT_PUBLIC_SUPABASE_ANON_KEY=${NEXT_PUBLIC_SUPABASE_ANON_KEY}
-      - SUPABASE_SERVICE_ROLE_KEY=${SUPABASE_SERVICE_ROLE_KEY}
       - NEXTAUTH_URL=https://tns.sleepyhollows.com
-      - NEXTAUTH_SECRET=${NEXTAUTH_SECRET}
