--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-datepicker": "^9.1.0",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.70.0",
+    "react-icons": "^5.5.0",
     "recharts": "^3.6.0",
     "resend": "^6.6.0",
     "twilio": "^5.11.1",
